# hybrid-multi-agent-trading-system

./: .cursorignore  .gitignore  Makefile  README.md  papers.csv  pyproject.toml  tasks.md
SDD/: project_context.md
artifacts/02_lgbm_dynamic_wfo_5m/: results.json
artifacts/02_lgbm_omni_0fee_v10/: results.json
artifacts/02_lgbm_omni_0fee_v11/: results.json
artifacts/02_lgbm_omni_0fee_v12/: results.json
artifacts/02_lgbm_omni_0fee_v3/: wfo_summary.csv
artifacts/02_lgbm_omni_0fee_v5/: results.json
artifacts/02_lgbm_omni_0fee_v6/: results.json  wfo_summary.csv
artifacts/02_lgbm_omni_0fee_v7/: results.json  wfo_summary.csv
artifacts/02_lgbm_omni_0fee_v8/: results.json
artifacts/03_mamba_omni_0fee_v2/: selected_features.json
artifacts/03_mamba_omni_0fee_v4/: selected_features.json
artifacts/06_tcn_omni_0fee_v0/: 01_lgbm_v1.ipynb  results.json  results_v1.json
artifacts/07_drl_omni_0fee_v0/: drl_oos_signals.parquet  results.json
artifacts/07_drl_omni_0fee_v1/: drl_oos_signals.parquet  results.json
artifacts/07_drl_omni_0fee_v2/: drl_oos_signals.parquet  results.json
artifacts/07_drl_omni_0fee_v3/: drl_oos_signals.parquet  results.json
artifacts/09_gp_omni_0fee_v0/: gp_oos_signals.parquet  results.json
artifacts/09_gp_omni_0fee_v1/: gp_oos_signals.parquet  results.json
artifacts/09_gp_omni_0fee_v2/: gp_oos_signals.parquet  results.json
configs/: neat_trading.ini
data/: load_features.py
data/features/: BTCUSDT_1h_microstructure.parquet.bak_fullmay  feature_registry.json  feature_registry_unified_v1.json  feature_registry_v2.json  feature_registry_v2_1h.json  feature_registry_v3_2026-06-02.json
data/static/: crypto_market_caps.csv
docs/: TASKS_meta_overhaul.md  features.md  glossary.md  meta_analysis_2026-06-11.md  research_direction_2026-06.md  strategy_evaluation.md  system_architecture.md
docs/design/: Feature_Engineering_Audit.md  LGBM_Modeling_Strategy_SDD.md  Mamba_Modeling_Strategy_SDD.md
docs/diagrams/: README.md  agent_communication.md  feature_pipeline.md  meta_dataflow.md
lab/docs/: notebook_analysis.md  notebook_overview.md  notebook_overview_2.md  vtrain8_analiza_pl.md  wiadomosc_do_promotora.md
lab/notebooks/: 01_data_exploration.ipynb  01_data_exploration_v1.ipynb  03_neat_training.ipynb  (+24 more)
latex_thesis/: 001_abstract.tex  abstract.md
local/: 01_system_design.md  02_algorithms_and_methods.md  03_implementation_details.md  04_experiment_log.md  05_paper_outline.md  06_glossary.md  evolving_stock_trading_system.ipynb  idea_for_the_system.md  plan_of_the_thesis.md
(+380 files in other folders)
